--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
     <title>Welcome to shree ji skin friendly ittar</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="description" content="Shree ji natural & sking friendly ittars">
+    <meta name="keywords" content="home made ittar, natural ittar, skin friendly ittar, ittar for aroma therapy">
+    <meta name="author" content="Lalita Mahajan">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head> 
   <body>
     <script>
