--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <script>
             window.location.href = "https://shreejiittar.mini.store";
     </script>
-    <a href="https://shreejiittar.mini.store">Click here to access out online store</a>
+    <a href="https://shreejiittar.mini.store"><h1 align="center">Click here to access our online store<h1></a>
   </body>
 </html>
