Redirect traffic to smartbiz

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head> 
   <body>
     <script>
-            window.location.href = "https://shreejiittar.mini.store";
+            // window.location.href = "https://shreejiittar.mini.store";
+            window.location.href ="https://smartbiz.in/shreejiittar";
     </script>
     <a href="https://shreejiittar.mini.store"><h1 align="center">Click here to access our online store<h1></a>
   </body>
