--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <html>
   <head>
-    <title>Welcome to shree ji skin friendly ittar</title>
+    <script src="page_navigation.js"></script>
+    <title>Welcome to Shree Ji skin-friendly ittar</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <meta charset="UTF-8">
-    <meta name="description" content="Shree ji natural & sking friendly ittars">
-    <meta name="keywords" content="home made ittar, natural ittar, skin friendly ittar, ittar for aroma therapy">
+    <meta name="description" content="Shree ji natural & skin-friendly ittars">
+    <meta name="keywords" content="homemade ittar, natural ittar, skin-friendly ittar, ittar for aroma therapy">
     <meta name="author" content="Lalita Mahajan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head> 
   <body>
     <script>
-             window.location.href = "https://shreejiittar.mini.store";
+             //window.location.href = "https://shreejiittar.mini.store";
             //window.location.href ="https://smartbiz.in/shreejiittar";
     </script>
     <a href="https://shreejiittar.mini.store"><h1 align="center">Click here to access our online store<h1></a>
