--- a/return_policy.html
+++ b/return_policy.html
@@ -14,7 +14,10 @@
   margin-left: auto;
   margin-right: auto;
 }
-
+.content {
+  text-shadow: none;
+  font-size: 25px;
+}
     </style>
   </head> 
   <body>
@@ -22,7 +25,10 @@
              //window.location.href = "https://shreejiittar.mini.store";
             //window.location.href ="https://smartbiz.in/shreejiittar";
     </script>
-    <img src="./logo.png" class="center" width="500" height="500"></img>
-    <a href="https://shreejiittar.mini.store"><h1 align="center">Way to our online store --> <h1></a>
+    
+    <div class="content">
+      <b>Return policy:</b>We have a no-return policy. However, if your item arrives damaged during transit, please notify us within 24 hours of receipt. If possible, please include an unboxing video to document the damage.
+      In the case of damaged items, we will only offer an exchange. We cannot accept returns for any other reason.
+    </div>
   </body>
 </html>
