--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="page_navigation.js"></script>
     <title>Welcome to Shree Ji skin-friendly ittar</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <meta name="msvalidate.01" content="55125CBE22A367F8B1DCF74F128F8160" />
     <meta charset="UTF-8">
     <meta name="description" content="Shree ji natural & skin-friendly ittars">
     <meta name="keywords" content="homemade ittar, natural ittar, skin-friendly ittar, ittar for aroma therapy">
