--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head> 
   <body>
     <script>
-             //window.location.href = "https://shreejiittar.mini.store";
+            window.location.href = "https://shreejiittar.mini.store";
             //window.location.href ="https://smartbiz.in/shreejiittar";
     </script>
     <img src="./logo.png" class="center" width="500" height="500"></img>
