--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="msvalidate.01" content="6D5465A7B911D6B8DBFDE7621EE2EA26" />
     <script src="page_navigation.js"></script>
     <title>Welcome to Shree Ji skin-friendly ittar</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
