--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QM7N8R0GC0"></script>
+     <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QM7N8R0GC0');
+    </script>
     <meta name="msvalidate.01" content="6D5465A7B911D6B8DBFDE7621EE2EA26" />
     <script src="page_navigation.js"></script>
     <title>Welcome to Shree Ji skin-friendly ittar</title>
