--- a/index.html
+++ b/index.html
@@ -14,18 +14,36 @@
     <title>Welcome to Shree Ji skin-friendly ittar</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <meta name="msvalidate.01" content="55125CBE22A367F8B1DCF74F128F8160" />
+
     <meta charset="UTF-8">
-    <meta name="description" content="Shree ji natural & skin-friendly ittars">
-    <meta name="keywords" content="homemade ittar, natural ittar, skin-friendly ittar, ittar for aroma therapy">
+
     <meta name="author" content="Lalita Mahajan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+    <meta name="description" content="Shreejiittar.in offers original, aromatherapy grade, skin-friendly, and harmful chemical-free ittars perfect for temple and worship use. Shop online for affordable prices.">
+    <meta name="keywords" content="ittars,itra,attar, aromatherapy, homemade, skin-friendly, natural, temple, worship, affordable, online, India, Khargone, shreeji">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
 
+
+    <meta property="og:title" content="Shreejiittar.in: Original, Skin-Friendly Ittar" />
+    <meta property="og:description" content="Shreejiittar.in offers original, aromatherapy grade, skin-friendly, and harmful chemical-free ittars perfect for temple and worship use. Shop online for affordable prices." />
+    <meta property="og:image" content="https://www.shreejiittar.in/logo.jpg" />
+    <meta property="og:site_name" content="Shreejiittar.in" />
+    <meta property="og:url" content="https://www.shreejiittar.in/" />
+    <meta property="og:type" content="website" />
+
+
+    <style>
+     .center {
+       display: block;
+       margin-left: auto;
+       margin-right: auto;
+     }
+     footer {
+       background-color: #eee;
+       padding: 20px;
+       text-align: center;
+     }
     </style>
   </head> 
   <body>
@@ -33,7 +51,12 @@
             window.location.href = "https://shreejiittar.mini.store";
             //window.location.href ="https://smartbiz.in/shreejiittar";
     </script>
-    <img src="./logo.png" class="center" width="500" height="500"></img>
-    <a href="https://shreejiittar.mini.store"><h1 align="center">Way to our online store --> <h1></a>
+    <img src="./logo.png" alt="Image not available" class="center" width="250" height="250"></img>
+    <a href="https://shreejiittar.mini.store"><h1 align="center">Way to our online store ... <h1></a>
+
+        
+    <footer align="center">
+            <p>&copy; 2023 Shreejiittar.in</p>
+    </footer>
   </body>
 </html>
