--- a/product.html
+++ b/product.html
@@ -48,5 +48,19 @@
       </div>
     </div>
     <a href="https://shreejiittar.mini.store"><h1 align="center">Way to our online store ... <h1></a>
-  </body>
+  
+      <script src="https://apis.google.com/js/platform.js?onload=renderBadge" async defer></script>
+
+    <script>
+      window.renderBadge = function() {
+        var ratingBadgeContainer = document.createElement("div");
+        document.body.appendChild(ratingBadgeContainer);
+        window.gapi.load('ratingbadge', function() {
+          window.gapi.ratingbadge.render(ratingBadgeContainer, {"merchant_id": 5308252776});
+        });
+      }
+    </script>
+            
+  
+    </body>
 </html>
