add new product page design

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       gtag('config', 'G-QM7N8R0GC0');
     </script>
     <meta name="msvalidate.01" content="6D5465A7B911D6B8DBFDE7621EE2EA26" />
+    <script src="./js/product_name_id_map.js"></script>
     <script src="./js/page_navigation.js"></script>
     <title>Welcome to Shree Ji skin-friendly ittar</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
