--- a/product.html
+++ b/product.html
@@ -1,66 +1,191 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="en">
   <head>
-    <title>Welcome to Shree Ji ittar & perfume</title>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <meta name="author" content="Lalita Mahajan">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="shreejiittar.in: Find your perfect ittar/attar & perfume fragrances at delightful prices">
-    <meta name="keywords" content="ittars,itra,attar, aromatherapy, homemade, skin-friendly, natural, temple, worship, affordable, online, India, Khargone, shreeji">
-    <meta name="robots" content="index, follow">
-    <meta name="googlebot" content="index, follow">
-    <meta property="og:title" content="Shreejiittar.in: Perfume & Skin-Friendly Ittar" />
-    <meta property="og:description" content="shreejiittar.in: Find your perfect ittar/attar & perfume fragrances at delightful prices" />
-    <meta property="og:image" content="https://www.shreejiittar.in/images/logo.png" />
-    <meta property="og:site_name" content="Shreejiittar.in" />
-    <meta property="og:url" content="https://www.shreejiittar.in/" />
-    <meta property="og:type" content="website" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shree Ji Ittar & Perfume</title>
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <script src="./js/product_page_js.js"></script>
-  </head> 
+  </head>
   <body>
 
-    <div class="container-fluid">
+
+    <!-- Start Top Bar -->
+    <div class="top-bar">
       <div class="row">
-        <div class="col-md-2">
-          <img src="./images/logo.png" alt="Image not available" width="100" height="100"></img>
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text"><img src="./images/logo.png" alt="Image not available" width="50" height="50"></img></li>
+            <li class="menu-text">Shree Ji Ittar</li>
+            <li class="has-submenu">
+              <a href="#">One</a>
+              <ul class="submenu menu vertical" data-submenu>
+                <li><a href="#">One</a></li>
+                <li><a href="#">Two</a></li>
+                <li><a href="#">Three</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Two</a></li>
+            <li><a href="#">Three</a></li>
+          </ul>
         </div>
-        <div class="col-md-10">
-          <h1>Shree Ji Ittar & perfume</h1>
-          <p>Find your perfect fragrance at delightful price</p>
+        <div class="top-bar-right">
+          <ul class="menu">
+            <li><input type="search" placeholder="Search"></li>
+            <li><button type="button" class="button">Search</button></li>
+          </ul>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-3">
-          <img id="product_img" src="" width="300" height="300"></img>
-        </div>
-        <div class="col-md-9">
-          <div class="row">
-            <div id="product_title" style="font-weight: bold; font-size:x-large;"></div>
+    </div>
+    <!-- End Top Bar -->
+    <br>
+    <br>
+    <div class="row">
+      <div class="medium-6 columns">
+        <!-- <img class="thumbnail" src="https://placehold.it/650x350"> -->
+        <img class="thumbnail" id="product_img" src="" width="400" height="400"></img>
+      </div>
+      <div class="medium-6 large-5 columns">
+        <h3><div id="product_title">a </div></h3>
+        <p><div id="product_description" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></div></p>
+
+        <label>Size
+        <select>
+          <option value="husker">Small</option>
+          <option value="starbuck">Medium</option>
+          <option value="hotdog">Large</option>
+          <option value="apollo">Yeti</option>
+        </select>
+        </label>
+
+        <div class="row">
+          <div class="small-3 columns">
+            <label for="middle-label" class="middle">Quantity</label>
           </div>
-          <div class="row">
-            <div id="product_description" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></div>
+          <div class="small-9 columns">
+            <input type="text" id="middle-label" placeholder="One fish two fish">
+          </div>
+        </div>
+
+        <a id="buy_button" target="_blank" class="hollow button large expanded">Buy on <img src="./images/minis_logo.png" width="20%"></a>
+
+        <div class="small secondary expanded button-group">
+            <a class="button">Facebook</a>
+            <a class="button">Twitter</a>
+            <a class="button">Yo</a>
+          </div>
+        </div>
+    </div>
+
+    <div class="column row">
+      <hr>
+      <ul class="tabs" data-tabs id="example-tabs">
+        <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">Reviews</a></li>
+        <li class="tabs-title"><a href="#panel2">Similar Products</a></li>
+      </ul>
+      <div class="tabs-content" data-tabs-content="example-tabs">
+        <div class="tabs-panel is-active" id="panel1">
+          <h4>Reviews</h4>
+          <div class="media-object stack-for-small">
+            <div class="media-object-section">
+              <img class="thumbnail" src="https://placehold.it/200x200">
+            </div>
+            <div class="media-object-section">
+              <h5>Mike Stevenson</h5>
+              <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
+            </div>
+          </div>
+          <div class="media-object stack-for-small">
+            <div class="media-object-section">
+              <img class="thumbnail" src="https://placehold.it/200x200">
+            </div>
+            <div class="media-object-section">
+              <h5>Mike Stevenson</h5>
+              <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you</p>
+            </div>
+          </div>
+          <div class="media-object stack-for-small">
+            <div class="media-object-section">
+              <img class="thumbnail" src="https://placehold.it/200x200">
+            </div>
+            <div class="media-object-section">
+              <h5>Mike Stevenson</h5>
+              <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you</p>
+            </div>
+          </div>
+          <label>
+            My Review
+            <textarea placeholder="None"></textarea>
+          </label>
+          <button class="button">Submit Review</button>
+        </div>
+        <div class="tabs-panel" id="panel2">
+          <div class="row medium-up-3 large-up-5">
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/350x200">
+              <h5>Other Product <small>$22</small></h5>
+              <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
+              <a href="#" class="button hollow tiny expanded">Buy Now</a>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/350x200">
+              <h5>Other Product <small>$22</small></h5>
+              <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
+              <a href="#" class="button hollow tiny expanded">Buy Now</a>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/350x200">
+              <h5>Other Product <small>$22</small></h5>
+              <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
+              <a href="#" class="button hollow tiny expanded">Buy Now</a>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/350x200">
+              <h5>Other Product <small>$22</small></h5>
+              <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
+              <a href="#" class="button hollow tiny expanded">Buy Now</a>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/350x200">
+              <h5>Other Product <small>$22</small></h5>
+              <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
+              <a href="#" class="button hollow tiny expanded">Buy Now</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <a href="https://shreejiittar.mini.store"><h1 align="center">Way to our online store ... <h1></a>
-  
-      <script src="https://apis.google.com/js/platform.js?onload=renderBadge" async defer></script>
 
+    <div class="row column">
+      <hr>
+      <ul class="menu">
+        <li>Yeti Store</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li class="float-right">Copyright &copy; Shree Ji Ittar
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+          </li>
+      </ul>
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script src="./js/product_name_id_map.js"></script>
     <script>
-      window.renderBadge = function() {
-        var ratingBadgeContainer = document.createElement("div");
-        document.body.appendChild(ratingBadgeContainer);
-        window.gapi.load('ratingbadge', function() {
-          window.gapi.ratingbadge.render(ratingBadgeContainer, {"merchant_id": 5308252776});
-        });
-      }
+      $(document).foundation();
+      productUrlMap.forEach(function(item){
+       if (window.location.href.endsWith(item.name)){
+        document.getElementById('buy_button').href = "https://shreejiittar.mini.store/products/"+item.id;
+        }
+       })
     </script>
-            
-  
-    </body>
+  </body>
 </html>
+
+
+
