--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
           <ul class="dropdown menu" data-dropdown-menu>
             <li class="menu-text"><img src="./images/logo.png" alt="Image not available" width="50" height="50"></img></li>
             <li class="menu-text">Shree Ji Ittar</li>
-            <li class="has-submenu">
+            <!-- <li class="has-submenu">
               <a href="#">One</a>
               <ul class="submenu menu vertical" data-submenu>
                 <li><a href="#">One</a></li>
@@ -26,7 +26,7 @@
               </ul>
             </li>
             <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
+            <li><a href="#">Three</a></li> -->
           </ul>
         </div>
         <div class="top-bar-right">
@@ -43,10 +43,10 @@
     <div class="row">
       <div class="medium-6 columns">
         <!-- <img class="thumbnail" src="https://placehold.it/650x350"> -->
-        <img class="thumbnail" id="product_img" src="" width="400" height="400"></img>
+        <img class="thumbnail" alt="Product image not found" id="product_img" src="" width="400" height="400"></img>
       </div>
       <div class="medium-6 large-5 columns">
-        <h3><div id="product_title">a </div></h3>
+        <h3><div id="product_title">Product not found </div></h3>
         <p><div id="product_description" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></div></p>
 
         <label>Size
@@ -57,7 +57,7 @@
           <option value="apollo">Yeti</option>
         </select>
         </label>
-
+<!-- 
         <div class="row">
           <div class="small-3 columns">
             <label for="middle-label" class="middle">Quantity</label>
@@ -65,14 +65,15 @@
           <div class="small-9 columns">
             <input type="text" id="middle-label" placeholder="One fish two fish">
           </div>
-        </div>
+        </div> -->
 
         <a id="buy_button" target="_blank" class="hollow button large expanded">Buy on <img src="./images/minis_logo.png" width="20%"></a>
 
         <div class="small secondary expanded button-group">
-            <a class="button">Facebook</a>
-            <a class="button">Twitter</a>
-            <a class="button">Yo</a>
+            <a class="button" href="https://www.instagram.com/shree_ji_ittar/" target="_blank">Instagram</a>
+            <a class="button" href="https://www.facebook.com/shreejiittar" target="_blank">Facebook</a>
+            <a class="button" href="https://wa.me/9407472537" target="_blank">Whatsapp</a>
+            <a class="button" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank">Direction</a>
           </div>
         </div>
     </div>
