--- a/product.html
+++ b/product.html
@@ -8,18 +8,6 @@
     <script src="./js/product_page_js.js"></script>
   </head>
   <body>
-
-    <script>
-      window.renderBadge = function() {
-        var ratingBadgeContainer = document.createElement("div");
-        document.body.appendChild(ratingBadgeContainer);
-        window.gapi.load('ratingbadge', function() {
-          window.gapi.ratingbadge.render(ratingBadgeContainer, {"merchant_id": 5308252776});
-        });
-      }
-    </script>
-
-
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="row">
@@ -54,8 +42,20 @@
     <div class="row">
       <div class="medium-6 columns">
         <!-- <img class="thumbnail" src="https://placehold.it/650x350"> -->
-        <img class="thumbnail" alt="Product image not found" id="product_img" src="" width="400" height="400"></img>
+        <img class="thumbnail" alt="Product image not found" id="product_img" src="" width="420" height="420"></img>
+        <div class="row small-up-4">
+          <div class="column">
+            <img class="thumbnail" src="https://placehold.it/250x250">
+          </div>
+          <div class="column">
+            <img class="thumbnail" src="https://placehold.it/250x250">
+          </div>
+          <div class="column">
+            <img class="thumbnail" src="https://placehold.it/250x250">
+          </div>
+        </div>
       </div>
+      
       <div class="medium-6 large-5 columns">
         <h3><div id="product_title">Product not found </div></h3>
         <p><div id="product_description" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></div></p>
@@ -96,40 +96,7 @@
       </ul>
       <div class="tabs-content" data-tabs-content="example-tabs">
         <div class="tabs-panel is-active" id="panel1">
-          <h4>Reviews</h4>
-          <script src="https://apis.google.com/js/platform.js?onload=renderBadge" async defer></script>hello
-          <div class="media-object stack-for-small">
-            <div class="media-object-section">
-              <img class="thumbnail" src="https://placehold.it/200x200">
-            </div>
-            <div class="media-object-section">
-              <h5>Mike Stevenson</h5>
-              <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
-            </div>
-          </div>
-          <div class="media-object stack-for-small">
-            <div class="media-object-section">
-              <img class="thumbnail" src="https://placehold.it/200x200">
-            </div>
-            <div class="media-object-section">
-              <h5>Mike Stevenson</h5>
-              <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you</p>
-            </div>
-          </div>
-          <div class="media-object stack-for-small">
-            <div class="media-object-section">
-              <img class="thumbnail" src="https://placehold.it/200x200">
-            </div>
-            <div class="media-object-section">
-              <h5>Mike Stevenson</h5>
-              <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you</p>
-            </div>
-          </div>
-          <label>
-            My Review
-            <textarea placeholder="None"></textarea>
-          </label>
-          <button class="button">Submit Review</button>
+          <!-- <div class='sk-ww-google-reviews' data-embed-id='25407608'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script> -->
         </div>
         <div class="tabs-panel" id="panel2">
           <div class="row medium-up-3 large-up-5">
@@ -171,9 +138,8 @@
     <div class="row column">
       <hr>
       <ul class="menu">
-        <li>Yeti Store</li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li>Shree Ji Ittar</li>
+        <li><a href="#">Catalogue</a></li>
         <li><a href="#">Contact</a></li>
         <li class="float-right">Copyright &copy; Shree Ji Ittar
             <script type="text/javascript">
