make size dropdown functional

--- a/product.html
+++ b/product.html
@@ -60,12 +60,8 @@
         <h3><div id="product_title">Product not found </div></h3>
         <p><div id="product_description" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></div></p>
 
-        <label>Size
-        <select>
-          <option value="husker">Small</option>
-          <option value="starbuck">Medium</option>
-          <option value="hotdog">Large</option>
-          <option value="apollo">Yeti</option>
+        <label>Size and price
+        <select id="size_dropdown">
         </select>
         </label>
 <!-- 
