--- a/product.html
+++ b/product.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shree Ji Ittar & Perfume</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <link rel="stylesheet" href="css/product_page.css">
     <script src="./js/product_page_js.js"></script>
   </head>
   <body>
+    <!-- Banner -->
+      <div id="banner-content" class="banner" align="center">
+        🚀 Free home delivery across INDIA, on order price above ₹399, <b>Check all our products</b> at: <a href=https://shreejiittar.mini.store>shreejiittar.mini.store</a>
+      </div>
+
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="row">
@@ -59,27 +65,20 @@
       <div class="medium-6 large-5 columns">
         <h3><div id="product_title">Product not found </div></h3>
         <p><div id="product_description" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></div></p>
-
-        <label>Size and price
-        <select id="size_dropdown">
-        </select>
-        </label>
-<!-- 
-        <div class="row">
-          <div class="small-3 columns">
-            <label for="middle-label" class="middle">Quantity</label>
-          </div>
-          <div class="small-9 columns">
-            <input type="text" id="middle-label" placeholder="One fish two fish">
-          </div>
-        </div> -->
-
+        <!-- <select id="size_dropdown">
+        </select> -->
+        <br>
+        <table class="hover" id="size_price_table">
+          <th>Bottel Size</th>
+          <th>Price per bottel</th>
+        </table>
+        <br>
         <a id="buy_button" target="_blank" class="hollow button large expanded">Buy on <img src="./images/minis_logo.png" width="20%"></a>
-
         <div class="small secondary expanded button-group">
             <a class="button" href="https://www.instagram.com/shree_ji_ittar/" target="_blank">Instagram</a>
             <a class="button" href="https://wa.me/9407472537" target="_blank">Whatsapp</a>
             <a class="button" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank">Direction</a>
+            <a class="button" href="tel:+919407472537" target="_blank">Call us</a>
           </div>
         </div>
     </div>
