add pricing and image logic fully functional

--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shree Ji Ittar & Perfume</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="css/product_page.css">
     <script src="./js/product_page_js.js"></script>
@@ -11,7 +12,7 @@
   <body>
     <!-- Banner -->
       <div id="banner-content" class="banner" align="center">
-        🚀 Free home delivery across INDIA, on order price above ₹399, <b>Check all our products</b> at: <a href=https://shreejiittar.mini.store>shreejiittar.mini.store</a>
+        🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. Shop our entire <a href=https://shreejiittar.mini.store>collection</a> now!
       </div>
 
     <!-- Start Top Bar -->
@@ -51,18 +52,18 @@
         <img class="thumbnail" alt="Product image not found" id="product_img" src="" width="420" height="420"></img>
         <div class="row small-up-4">
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/250x250">
+            <img class="thumbnail1" alt="" id="additionalImg1" onclick="swapImg(1)">
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/250x250">
+            <img class="thumbnail1" alt="" id="additionalImg2" onclick="swapImg(2)">
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/250x250">
+            <img class="thumbnail1" alt="" id="additionalImg3" onclick="swapImg(3)">
           </div>
         </div>
       </div>
       
-      <div class="medium-6 large-5 columns">
+      <div class="medium-6 large-6 columns">
         <h3><div id="product_title">Product not found </div></h3>
         <p><div id="product_description" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></div></p>
         <!-- <select id="size_dropdown">
