add review page

--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
             <!-- <li class="menu-text"><img src="./images/logo.png" alt="Image not available" width="50" height="50"></img></li> -->
-            <li class="menu-text">SHREE JI ITTAR & PERFUME</li>
+            <li class="menu-text"><a id="my_heading" href="https://shreejiittar.mini.store/">SHREE JI ITTAR & PERFUME</a></li>
              <!-- <li class="has-submenu">
               <a href="#">Catalogue</a>
               <ul class="submenu menu vertical" data-submenu>
@@ -75,13 +75,13 @@
           <th>Price per bottel</th>
         </table>
         <br>
-        <a id="buy_button" target="_blank" class="hollow button large expanded">Buy on <img src="./images/minis_logo.png" width="20%"></a>
+        <a id="buy_button" class="hollow button large expanded">Buy on <img src="./images/minis_logo.png" width="20%"></a>
         <hr/>
         <div class="small secondary expanded button-group">
-            <a class="button" href="https://maps.app.goo.gl/c6mKdkmExXSTsegH6" target="_blank">Check our recent Google reviews</a>
-            <a class="button" href="https://wa.me/9407472537" target="_blank">For any query contact us</a>
-            <!-- <a class="button" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank">Direction</a>
-            <a class="button" href="tel:+919407472537" target="_blank">Call us</a> -->
+            <a class="button" href="./reviews.html">Check our recent Google reviews</a>
+            <a class="button" href="https://wa.me/9407472537">For any query contact us</a>
+            <!-- <a class="button" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">Direction</a>
+            <a class="button" href="tel:+919407472537">Call us</a> -->
           </div>
         </div>
     </div>
@@ -95,20 +95,20 @@
       </ul>
       <div class="tabs-content" data-tabs-content="example-tabs">
         <div class="tabs-panel" id="panel1">
-          <!-- <div class='sk-ww-google-reviews' data-embed-id='25407608'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script> -->
+          <!--  -->
         </div>
         <div class="tabs-panel is-active" text- id="panel2">
           <img src="./images/catalog/ittar_catalog.jpeg">
           <hr/>
           <a href="./images/catalog/ittar_catalog.jpeg" class="shop_btn button" download>Download catalog</a>
-          <a href="https://shreejiittar.mini.store" target="_blank" " class="shop_btn button">Shop now</a>
+          <a href="https://shreejiittar.mini.store" class="shop_btn button">Shop now</a>
 
         </div>
         <div class="tabs-panel" id="panel3">
           <img src="./images/catalog/perfume catalog.jpeg">
           <hr/>
           <a href="./images/catalog/perfume catalog.jpeg" download class="shop_btn button">Download catalog</a>
-          <a href="https://shreejiittar.mini.store" target="_blank"  class="shop_btn button">Shop now</a>
+          <a href="https://shreejiittar.mini.store"  class="shop_btn button">Shop now</a>
         </div>
       </div>
     </div>
@@ -116,7 +116,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-6 columns mycontent">
-          <h4>We specialize in crafting devotional fragrances..</h4>
+          <h4>We specialize in crafting <b>devotional</b> fragrances..</h4>
           <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
           <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
           <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
@@ -126,10 +126,10 @@
           <ul class="menu">
             <hr/>
             <h4>Get in touch..</h4>
-            <li><a target="_blank" class="fa fa-2x fa-instagram" href="https://www.instagram.com/shree_ji_ittar/" target="_blank"></a></li>
-            <li><a target="_blank" class="fa fa-2x fa-whatsapp" href="https://wa.me/9407472537" target="_blank"></a></li>
-            <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank"></a></li>
-            <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-instagram" href="https://www.instagram.com/shree_ji_ittar/"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-whatsapp" href="https://wa.me/9407472537"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537"></a></li>
           </ul>
         </div>
       </div>
@@ -137,7 +137,7 @@
     <div class="row column">
       <hr>
       <ul class="menu">
-        <li>Shree Ji Ittar</li>
+        <!-- <li>Shree Ji Ittar</li> -->
         <!-- <li><a href="#">Reviews</a></li> -->
         <li class="float-right">Copyright &copy; Shree Ji Ittar
             <script type="text/javascript">
