--- a/product.html
+++ b/product.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shree Ji Ittar & Perfume</title>
+    <meta name="description" content="Discover skin-friendly, natural ittar & devotional fragrances. Highest quality, Best for temples. Pocket-friendly & cost-effective in price. Shop on Shree Ji Ittar!"/>
+    <title>Natural & Devotional Ittar | Pocket Perfumes | Shree Ji Ittar</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="css/product_page.css">
@@ -16,30 +17,16 @@
       <div id="banner-content" class="banner" align="center">
         🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. Shop our entire <a href=https://shreejiittar.mini.store>collection</a> now!
       </div>
-
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="row">
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
-            <!-- <li class="menu-text"><img src="./images/logo.png" alt="Image not available" width="50" height="50"></img></li> -->
             <li class="menu-text"><a id="my_heading" href="https://shreejiittar.mini.store/">SHREE JI ITTAR & PERFUME</a></li>
-             <!-- <li class="has-submenu">
-              <a href="#">Catalogue</a>
-              <ul class="submenu menu vertical" data-submenu>
-                <li><a href="#">One</a></li>
-                <li><a href="#">Two</a></li>
-                <li><a href="#">Three</a></li>
-              </ul>
-            </li> -->
-            <!-- <li><a href="#">Reviews</a></li> -->
           </ul>
         </div>
         <div class="top-bar-right">
           <ul class="menu">
-
-            <!-- <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li> -->
           </ul>
         </div>
       </div>
@@ -49,7 +36,6 @@
     <br>
     <div class="row">
       <div class="medium-6 columns">
-        <!-- <img class="thumbnail" src="https://placehold.it/650x350"> -->
         <img class="thumbnail" alt="Product image not found" id="product_img" src="" width="420" height="420"></img>
         <div class="row small-up-4">
           <div class="column">
@@ -63,12 +49,9 @@
           </div>
         </div>
       </div>
-      
       <div class="medium-6 large-6 columns">
         <h2><div id="product_title">Product not found </div></h2>
         <p><div id="product_description" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></div></p>
-        <!-- <select id="size_dropdown">
-        </select> -->
         <br>
         <table class="hover" id="size_price_table">
           <th>Bottel Size</th>
@@ -80,29 +63,23 @@
         <div class="small secondary expanded button-group">
             <a class="button" href="./reviews.html">Check our recent Google reviews</a>
             <a class="button" href="https://wa.me/9407472537">For any query contact us</a>
-            <!-- <a class="button" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">Direction</a>
-            <a class="button" href="tel:+919407472537">Call us</a> -->
           </div>
         </div>
     </div>
-
     <div class="column row">
       <hr>
       <ul class="tabs" data-tabs id="example-tabs">
-        <!-- <li class="tabs-title"><a href="#panel1">Product catalog => </a></li> -->
         <li class="tabs-title is-active" aria-selected="true"><a class="panel_tab" href="#panel2">Ittar catalog</a></li>
         <li class="tabs-title"><a class="panel_tab" href="#panel3">Perfume catalog</a></li>
       </ul>
       <div class="tabs-content" data-tabs-content="example-tabs">
         <div class="tabs-panel" id="panel1">
-          <!--  -->
         </div>
         <div class="tabs-panel is-active" text- id="panel2">
           <img src="./images/catalog/ittar_catalog.jpeg">
           <hr/>
           <a href="./images/catalog/ittar_catalog.jpeg" class="shop_btn button" download>Download catalog</a>
           <a href="https://shreejiittar.mini.store" class="shop_btn button">Shop now</a>
-
         </div>
         <div class="tabs-panel" id="panel3">
           <img src="./images/catalog/perfume catalog.jpeg">
@@ -137,8 +114,6 @@
     <div class="row column">
       <hr>
       <ul class="menu">
-        <!-- <li>Shree Ji Ittar</li> -->
-        <!-- <li><a href="#">Reviews</a></li> -->
         <li class="float-right">Copyright &copy; Shree Ji Ittar
             <script type="text/javascript">
               document.write(new Date().getFullYear());
@@ -146,9 +121,6 @@
           </li>
       </ul>
     </div>
-
-
-
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
     <script src="./js/product_name_id_map.js"></script>
