add image gallary

--- a/image_gallery.html
+++ b/image_gallery.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reviews - Shree Ji Ittar & Perfume</title>
-    <meta name="description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"/>
-    <meta name="og:title" content="Reviews - Shree Ji Ittar & Perfume">  
-    <meta name="og:description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"> 
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Image gallery - Shree Ji Ittar & Perfume</title>
+    <meta name="description" content="Check recent images from 'Shree Ji Ittar & Perfume'"/>
+    <meta name="og:title" content="Image gallery - Shree Ji Ittar & Perfume">  
+    <meta name="og:description" content="Check recent images from 'Shree Ji Ittar & Perfume'"> 
     <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable">
     <meta name="author" content="Lalita Mahajan">
 
@@ -40,7 +40,87 @@
     <br>
     <br>
     <div class="row">
-      <div class='sk-ww-google-reviews' data-embed-id='25407608'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script>
+      
+
+      <div class="featured-image-block-grid">
+        <div class="featured-image-block-grid-header small-11 medium-9 large-8 columns text-left">
+          <h3>Make a switch to natural and non toxic fragrance</h3>
+          <hr/>
+        </div>
+
+        <div class="row large-up-4 small-up-2">
+          <div class="featured-image-block column">
+              <!-- <img src="https://unsplash.it/600/600?image=1075" /> -->
+              <!-- <p class="text-center featured-image-block-title">New York</p> -->
+              <img src="./images/gallery/1.jpg" />
+          </div>
+
+          <div class="featured-image-block column">
+            <img src="./images/gallery/2.jpg" />
+          </div>
+
+          <div class="featured-image-block column">
+           <a href="#">
+            <img src="./images/gallery/3.jpg" />
+            </a>
+          </div>
+
+          <div class="featured-image-block column">
+           <a href="#">
+            <img src="./images/gallery/4.jpg" />
+            </a>
+          </div>
+
+          <div class="featured-image-block column">
+           <a href="#">
+            <img src="./images/gallery/5.jpg" />
+            </a>
+          </div>
+
+          <div class="featured-image-block column">
+           <a href="#">
+            <img src="./images/gallery/6.jpg" />
+            </a>
+          </div>
+
+          <div class="featured-image-block column">
+           <a href="#">
+            <img src="./images/gallery/7.jpg" />
+            </a>
+          </div>
+
+          <div class="featured-image-block column">
+           <a href="#">
+            <img src="./images/gallery/8.jpg" />
+            </a>
+          </div>
+
+           <div class="featured-image-block column">
+            <a href="#">
+             <img src="./images/gallery/9.jpg" />
+             </a>
+           </div>
+
+           <div class="featured-image-block column">
+            <a href="#">
+             <img src="./images/gallery/10.jpg" />
+             </a>
+           </div>
+
+           <div class="featured-image-block column">
+            <a href="#">
+             <img src="./images/gallery/11.jpg" />
+             </a>
+           </div>
+
+           <div class="featured-image-block column">
+            <a href="#">
+             <img src="./images/gallery/12.jpg"/>
+             </a>
+           </div>
+        </div>
+      </div>
+
     </div>
     <br/>
     <div class="callout large secondary">
@@ -74,6 +154,17 @@
           </li>
       </ul>
     </div>
+
+
+
+    <div class="reveal" id="animatedModal10" data-reveal data-close-on-click="true" data-animation-in="spin-in" data-animation-out="spin-out">
+      <h1>Whoa, I'm dizzy!</h1>
+      <p class="lead">There are many options for animating modals, check out the Motion UI library to see them all</p>
+      <button class="close-button" data-close aria-label="Close reveal" type="button">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
     <script src="./js/product_name_id_map.js"></script>
