--- a/product.html
+++ b/product.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Discover skin-friendly, natural ittar & devotional fragrances. Highest quality, Best for temples. Pocket-friendly & cost-effective in price. Shop on Shree Ji Ittar!"/>
-    <title>Natural & Devotional Ittar | Pocket Perfumes | Shree Ji Ittar</title>
+    <title>Natural & Devotional fragrance | Pocket Perfumes | Shree Ji Ittar</title>
+    <meta name="description" content="Discover skin-friendly, natural ittar & devotional fragrances. Highest quality, Best for temples. Pocket-friendly & cost-effective in price. Shop on Shree Ji Ittar & Perfume!"/>
+    <meta name="og:title" content="Natural & Devotional fragrance | Pocket Perfumes | Shree Ji Ittar">  
+    <meta name="og:description" content="Discover skin-friendly, natural ittar & devotional fragrances. Highest quality, Best for temples. Pocket-friendly & cost-effective in price. Shop on Shree Ji Ittar & Perfume!"> 
+    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable">
+    <meta name="author" content="Lalita Mahajan">
+
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="css/product_page.css">
@@ -62,7 +68,7 @@
         <hr/>
         <div class="small secondary expanded button-group">
             <a class="button" href="./reviews.html">Check our recent Google reviews</a>
-            <a class="button" href="https://wa.me/9407472537">For any query contact us</a>
+            <a class="button" href="./image_gallery.html">Image Gallery</a>
           </div>
         </div>
     </div>
