--- a/product.html
+++ b/product.html
@@ -45,13 +45,13 @@
         <img class="thumbnail" alt="Product image not found" id="product_img" src="" width="420" height="420"></img>
         <div class="row small-up-4">
           <div class="column">
-            <img class="thumbnail1" alt="" id="additionalImg1" onclick="swapImg(1)">
+            <img class="thumbnail1" id="additionalImg1" onclick="swapImg(1)">
           </div>
           <div class="column">
-            <img class="thumbnail1" alt="" id="additionalImg2" onclick="swapImg(2)">
+            <img class="thumbnail1" id="additionalImg2" onclick="swapImg(2)">
           </div>
           <div class="column">
-            <img class="thumbnail1" alt="" id="additionalImg3" onclick="swapImg(3)">
+            <img class="thumbnail1" id="additionalImg3" onclick="swapImg(3)">
           </div>
         </div>
       </div>
